cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTestCase/macros.cpp
#define MMM(x) x
#define CONCAT(a, b, c) a##b##c
namespace std {}

int main() {
    MMM(std)::cout << "Hello";
    CONCAT(s, t, d)::cout << endl;
}
